# GD-Life-Rust

./: Cargo.toml  README.md
src/: main.rs
