[package]
name = "life"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7"
microbit-v2 = "0.13.0"
rtt-target = "0.4"
embedded-hal = "0.2.7"

[dependencies.nanorand]
version = "0.7.0"
default-features = false
features = ["pcg64"]

[dependencies.panic-rtt-target]
version = "0.1"
features = ["cortex-m"]

[dependencies.cortex-m]
version = "0.7"
features = ["inline-asm", "critical-section-single-core"]
